Lintian repair error

--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -22,18 +22,6 @@ private_icons = \
 	hicolor_actions_16x16_deleall-bt.png \
 	hicolor_actions_16x16_dele-bt.png \
 	hicolor_actions_16x16_newfolder-bt.png \
-	hicolor_actions_16x16_close-clicked.png \
-	hicolor_actions_16x16_close-hover.png \
-	hicolor_actions_16x16_close.png \
-	hicolor_actions_16x16_maximize-clicked.png \
-	hicolor_actions_16x16_maximize-hover.png \
-	hicolor_actions_16x16_maximize.png \
-	hicolor_actions_16x16_minimize-clicked.png \
-	hicolor_actions_16x16_minimize-hover.png \
-	hicolor_actions_16x16_minimize.png \
-	hicolor_actions_16x16_unmaximize-clicked.png \
-	hicolor_actions_16x16_unmaximize-hover.png \
-	hicolor_actions_16x16_unmaximize.png \
 	hicolor_actions_16x16_insert-pause.png \
 	hicolor_actions_16x16_iso-image-burn.png \
 	hicolor_actions_16x16_iso-image-new.png \
@@ -42,6 +30,7 @@ private_icons = \
 	hicolor_actions_16x16_media-optical-burn.png \
 	hicolor_actions_16x16_media-optical-copy.png \
 	hicolor_actions_16x16_media-optical-data-new1.png \
+	hicolor_actions_16x16_media-optical-welc-new.png \
     hicolor_actions_16x16_media-optical-video-new.png \
 	hicolor_actions_16x16_transform-crop-and-resize.png \
 	hicolor_actions_22x22_insert-pause.png \
@@ -52,6 +41,7 @@ private_icons = \
 	hicolor_actions_22x22_media-optical-burn.png \
 	hicolor_actions_22x22_media-optical-copy.png \
 	hicolor_actions_22x22_media-optical-data-new1.png \
+	hicolor_actions_22x22_media-optical-welc-new.png \
     hicolor_actions_22x22_media-optical-video-new.png \
 	hicolor_actions_22x22_transform-crop-and-resize.png \
 	hicolor_actions_24x24_insert-pause.png \
@@ -62,6 +52,7 @@ private_icons = \
 	hicolor_actions_24x24_media-optical-burn.png \
 	hicolor_actions_24x24_media-optical-copy.png \
 	hicolor_actions_24x24_media-optical-data-new1.png \
+	hicolor_actions_24x24_media-optical-welc-new.png \
     hicolor_actions_24x24_media-optical-video-new.png \
 	hicolor_actions_24x24_transform-crop-and-resize.png \
 	hicolor_actions_32x32_insert-pause.png \
@@ -72,13 +63,23 @@ private_icons = \
 	hicolor_actions_32x32_media-optical-burn.png \
 	hicolor_actions_32x32_media-optical-copy.png \
 	hicolor_actions_32x32_media-optical-data-new1.png \
+	hicolor_actions_32x32_media-optical-welc-new.png \
     hicolor_actions_32x32_media-optical-video-new.png \
 	hicolor_actions_32x32_transform-crop-and-resize.png \
+	hicolor_actions_45x30_close-clicked.png \
+        hicolor_actions_45x30_close-hover.png \
+        hicolor_actions_45x30_close.png \
+        hicolor_actions_45x30_maximize-clicked.png \
+        hicolor_actions_45x30_maximize-hover.png \
+        hicolor_actions_45x30_maximize.png \
+        hicolor_actions_45x30_minimize-clicked.png \
+        hicolor_actions_45x30_minimize-hover.png \
+        hicolor_actions_45x30_minimize.png \
+        hicolor_actions_45x30_unmaximize-clicked.png \
+        hicolor_actions_45x30_unmaximize-hover.png \
+        hicolor_actions_45x30_unmaximize.png \
 	hicolor_actions_48x48_media-optical-video-new.png \
-	hicolor_actions_48x48_iso-image-burn.png \
-	hicolor_actions_48x48_media-optical-data-new1.png \
 	hicolor_actions_48x48_dialog-message.png \
-	hicolor_actions_48x48_media-optical-welc-new.png \
 	hicolor_actions_56x56_media-optical-welc-new.png \
 	hicolor_actions_56x56_media-optical-data-new1.png \
 	hicolor_actions_56x56_iso-image-burn.png \
@@ -207,6 +208,7 @@ noinst_DATA = \
 	hicolor_actions_16x16_media-optical-burn.svg \
 	hicolor_actions_16x16_media-optical-copy.svg \
 	hicolor_actions_16x16_media-optical-data-new1.svg \
+	hicolor_actions_16x16_media-optical-welc-new.svg \
 	hicolor_actions_16x16_transform-crop-and-resize.xcf.bz2 \
 	hicolor_actions_22x22_insert-pause.svg \
 	hicolor_actions_22x22_iso-image-burn.svg \
@@ -216,6 +218,7 @@ noinst_DATA = \
 	hicolor_actions_22x22_media-optical-burn.svg \
 	hicolor_actions_22x22_media-optical-copy.svg \
 	hicolor_actions_22x22_media-optical-data-new1.svg \
+	hicolor_actions_22x22_media-optical-welc-new.svg \
 	hicolor_actions_22x22_transform-crop-and-resize.xcf.bz2 \
 	hicolor_actions_32x32_insert-pause.svg \
 	hicolor_actions_32x32_iso-image-burn.svg \
@@ -225,6 +228,7 @@ noinst_DATA = \
 	hicolor_actions_32x32_media-optical-burn.svg \
 	hicolor_actions_32x32_media-optical-copy.svg \
 	hicolor_actions_32x32_media-optical-data-new1.svg \
+	hicolor_actions_32x32_media-optical-welc-new.svg \
 	hicolor_actions_32x32_transform-crop-and-resize.svg \
 	hicolor_apps_src_burner.svg \
 	hicolor_status_16x16_burner-disc-00.svg \
