--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Kylin Team <team+kylin@tracker.debian.org>
 Uploaders: wenbo <wenbo@kylinos.cn>,
            handsome_feng <jianfengli@ubuntukylin.com>
-Build-Depends: debhelper (>= 11),
+Build-Depends: debhelper-compat (= 12),
                gnome-common,
                gnome-pkg-tools (>= 0.7),
                yelp-tools,
@@ -32,7 +32,8 @@ Build-Depends: debhelper (>= 11),
                intltool (>= 0.50),
                libglib2.0-doc,
                libgtk-3-doc
-Standards-Version: 4.1.5
+Standards-Version: 4.4.1
+Rules-Requires-Root: no
 Homepage: https://www.ukui.org
 Vcs-Git: https://github.com/ukui/kylin-burner.git
 Vcs-Browser: https://github.com/ukui/kylin-burner
