Fix the compile error in V10

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,3 +1,21 @@
+if(NOT TAGLIB_INCLUDES)
+    message(STATUS "FOUND NO TAGLIB INCLUDE DIRS")
+    execute_process(COMMAND whereis taglib OUTPUT_VARIABLE TAGLIB_INCLUDES)
+    STRING(REGEX MATCH "/[0-9A-Za-z/]*/*" TAGLIB_INC ${TAGLIB_INCLUDES})
+    set(TAGLIB_INCLUDES ${TAGLIB_INC})
+    message(STATUS "FOUND & SET TAGLIB INCLUDE DIRS IN LOCAL : ${TAGLIB_INCLUDES}")
+endif()
+
+if(NOT TAGLIB_LIBRARIES)
+    message(STATUS "FOUND NO TAGLIB LIBRARIES DIRS")
+    execute_process(COMMAND whereis libtag OUTPUT_VARIABLE TAGLIB_LIBRARIES)
+    STRING(REGEX MATCH "/[0-9A-Za-z/_-]*" TAGLIB_INC ${TAGLIB_LIBRARIES})
+    set(TAGLIB_LIBRARIES ${TAGLIB_INC})
+    message(STATUS "FOUND & SET TAGLIB LIBRARIES DIRS IN LOCAL: ${TAGLIB_LIBRARIES}")
+    LINK_DIRECTORIES(${TAGLIB_LIBRARIES})
+    set(TAGLIB_LIBRARIES "-ltag")
+endif(NOT TAGLIB_LIBRARIES)
+
 include_directories( . )
 
 add_subdirectory( decoder )
