fix bug 19267 19148 19138 19073.etc

--- a/src/org.kde.kylin-burner.desktop
+++ b/src/org.kde.kylin-burner.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Exec=/usr/bin/burner %U
-Icon=/usr/share/k3b/pic/icon/logo.ico
+Icon=/usr/share/k3b/pic/icon/128.png
 X-DocPath=k3b/index.html
 GenericName=Disk Burning
 GenericName[ar]=حرق الأقراص
