--- a/src/org.kde.kylin-burner.desktop
+++ b/src/org.kde.kylin-burner.desktop
@@ -184,7 +184,7 @@ MimeType=application/x-k3b;application/x-iso;application/x-cd-image;application/
 StartupNotify=true
 StartupWMClass=k3b
 X-KDE-NativeMimeType=application/x-k3b;
-Categories=KDE;Qt;AudioVideo;DiscBurning;Filesystem;
+Categories=KDE;Qt;DiscBurning;Filesystem;
 X-DBUS-ServiceType=Unique
 InitialPreference=5
 X-DBUS-ServiceName=org.kde.k3b
