--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Build-Depends: cmake,
                libmp3lame-dev,
                libmpcdec-dev,
                libmusicbrainz5-dev,
+               libgsettings-qt-dev,
                libqt5webkit5-dev (>= 5.10.0~),
                libsamplerate0-dev,
                libsndfile1-dev,
@@ -53,10 +54,12 @@ Rules-Requires-Root: no
 Package: kylin-burner
 Architecture: any
 Depends: cdparanoia,
+         libgsettings-qt-dev,
          cdrdao [linux-any],
          cdrskin,
          genisoimage,
          kylin-burner-data (= ${source:Version}),
+         kylin-burner-i18n (= ${source:Version}),
          libkylin-burner7 (= ${binary:Version}),
          udisks2 [linux-any],
          wodim,
