Add about dialog and fix bug like delete/clear items in disk

--- a/src/org.kde.kylin-burner.desktop
+++ b/src/org.kde.kylin-burner.desktop
@@ -115,71 +115,71 @@ Comment[x-test]=xxDisk writing programxx
 Comment[zh_CN]=CD 刻录程序
 Comment[zh_TW]=碟片寫入程式
 Terminal=false
-Name=burner
+Name=Kylin Burner
 Name[ar]=كي3بي
-Name[be]=burner
-Name[bg]=burner
-Name[bs]=burner
-Name[ca]=burner
-Name[ca@valencia]=burner
-Name[cs]=burner
-Name[csb]=burner
-Name[da]=burner
-Name[de]=burner
-Name[el]=burner
-Name[en_GB]=burner
-Name[eo]=burner
-Name[es]=burner
-Name[et]=burner
-Name[eu]=burner
-Name[fi]=burner
-Name[fr]=burner
-Name[ga]=burner
-Name[gl]=burner
-Name[he]=burner
+Name[be]=Kylin Burner
+Name[bg]=Kylin Burner
+Name[bs]=Kylin Burner
+Name[ca]=Kylin Burner
+Name[ca@valencia]=Kylin Burner
+Name[cs]=Kylin Burner
+Name[csb]=Kylin Burner
+Name[da]=Kylin Burner
+Name[de]=Kylin Burner
+Name[el]=Kylin Burner
+Name[en_GB]=Kylin Burner
+Name[eo]=Kylin Burner
+Name[es]=Kylin Burner
+Name[et]=Kylin Burner
+Name[eu]=Kylin Burner
+Name[fi]=Kylin Burner
+Name[fr]=Kylin Burner
+Name[ga]=Kylin Burner
+Name[gl]=Kylin Burner
+Name[he]=Kylin Burner
 Name[hi]=के3बी
 Name[hne]=के3बी
-Name[hr]=burner
-Name[hsb]=burner
-Name[hu]=burner
-Name[ia]=burner
-Name[id]=burner
-Name[is]=burner
-Name[it]=burner
-Name[ja]=burner
-Name[kk]=burner
-Name[km]=burner
-Name[ko]=burner
-Name[lt]=burner
-Name[lv]=burner
-Name[mai]=burner
+Name[hr]=Kylin Burner
+Name[hsb]=Kylin Burner
+Name[hu]=Kylin Burner
+Name[ia]=Kylin Burner
+Name[id]=Kylin Burner
+Name[is]=Kylin Burner
+Name[it]=Kylin Burner
+Name[ja]=Kylin Burner
+Name[kk]=Kylin Burner
+Name[km]=Kylin Burner
+Name[ko]=Kylin Burner
+Name[lt]=Kylin Burner
+Name[lv]=Kylin Burner
+Name[mai]=Kylin Burner
 Name[mr]=के3बी
-Name[nb]=burner
-Name[nds]=burner
+Name[nb]=Kylin Burner
+Name[nds]=Kylin Burner
 Name[ne]=केथ्रीबी
-Name[nl]=burner
-Name[nn]=burner
-Name[pa]=burner
-Name[pl]=burner
-Name[pt]=burner
-Name[pt_BR]=burner
-Name[ro]=burner
-Name[ru]=burner
-Name[sk]=burner
-Name[sl]=burner
-Name[sq]=burner
+Name[nl]=Kylin Burner
+Name[nn]=Kylin Burner
+Name[pa]=Kylin Burner
+Name[pl]=Kylin Burner
+Name[pt]=Kylin Burner
+Name[pt_BR]=Kylin Burner
+Name[ro]=Kylin Burner
+Name[ru]=Kylin Burner
+Name[sk]=Kylin Burner
+Name[sl]=Kylin Burner
+Name[sq]=Kylin Burner
 Name[sr]=К3б
 Name[sr@ijekavian]=К3б
-Name[sr@ijekavianlatin]=burner
-Name[sr@latin]=burner
-Name[sv]=burner
-Name[th]=burner
-Name[tr]=burner
-Name[ug]=burner
-Name[uk]=burner
-Name[x-test]=xxburnerxx
+Name[sr@ijekavianlatin]=Kylin Burner
+Name[sr@latin]=Kylin Burner
+Name[sv]=Kylin Burner
+Name[th]=Kylin Burner
+Name[tr]=Kylin Burner
+Name[ug]=Kylin Burner
+Name[uk]=Kylin Burner
+Name[x-test]=xxKylin Burnerxx
 Name[zh_CN]=麒麟刻录
-Name[zh_TW]=burner
+Name[zh_TW]=Kylin Burner
 MimeType=application/x-k3b;application/x-iso;application/x-cd-image;application/x-cue;x-content/blank-cd;x-content/blank-dvd;x-content/blank-bd;x-content/blank-hddvd;
 StartupNotify=true
 StartupWMClass=k3b
