--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Build-Depends: cmake,
                libqt5webkit5-dev (>= 5.10.0~),
                libsamplerate0-dev,
                libsndfile1-dev,
-               libtag1-dev,
+               libtag,
                libvorbis-dev,
                pkg-kde-tools (>= 0.15.16),
                qtbase5-dev (>= 5.10.0~),
