Change debian depends

--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,9 @@ Depends: cdparanoia,
          cdrdao [linux-any],
          cdrskin,
          genisoimage,
+	 dvd+rw-tools,
+	 growisofs,
+	 vcdimager,
          kylin-burner-data (= ${source:Version}),
          kylin-burner-i18n (= ${source:Version}),
          libkylin-burner7 (= ${binary:Version}),
@@ -65,7 +68,7 @@ Depends: cdparanoia,
          wodim,
          ${misc:Depends},
          ${shlibs:Depends},
-Recommends: dvd+rw-tools, growisofs, kylin-burner-i18n, libkylin-burner7-extracodecs, vcdimager
+Recommends: kylin-burner-i18n, libkylin-burner7-extracodecs
 Suggests: kylin-burner-extrathemes,
           kde-config-cddb,
           normalize-audio,
