Fix compile error

--- a/debian/control
+++ b/debian/control
@@ -40,8 +40,8 @@ Build-Depends: cmake,
                libqt5webkit5-dev (>= 5.10.0~),
                libsamplerate0-dev,
                libsndfile1-dev,
-               libtag,
                libvorbis-dev,
+	       libtag1-dev,
                pkg-kde-tools (>= 0.15.16),
                qtbase5-dev (>= 5.10.0~),
                shared-mime-info,
