Add depends for compiling error

--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,9 @@ Build-Depends: cmake,
                libkf5solid-dev (>= 5.56.0~),
                libkf5widgetsaddons-dev (>= 5.56.0~),
                libkf5xmlgui-dev (>= 5.56.0~),
+	       libkf5windowsystem-dev (>= 5.56.0~),
+               libqt5x11extras5-dev (>= 5.10.0~),
+	       libx11-dev,
                libmad0-dev,
                libmp3lame-dev,
                libmpcdec-dev,
