1. Fix some style and icons;2. Fix some bugs like drag to image burn and so on.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,6 +287,7 @@ endif(K3B_BUILD_API_DOCS)
 add_subdirectory( libk3bdevice )
 add_subdirectory( libk3b )
 add_subdirectory( src )
+add_subdirectory( helper )
 add_subdirectory( kioslaves )
 add_subdirectory( plugins )
 add_subdirectory( doc )
