--- a/src/kylin-burner.desktop
+++ b/src/kylin-burner.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Exec=/usr/bin/burner %U
+Exec=/usr/bin/kylin-burner %U
 #Icon=/usr/share/k3b/pic/icon/128.png
 Icon=disk-burner
 X-DocPath=k3b/index.html
