--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Build-Depends: debhelper-compat (= 12),
                libnautilus-extension-dev (>= 3.21.92-3~),
                libburn-dev (>= 0.4.0),
                libisofs-dev (>= 0.6.4),
-               libtracker-sparql-2.0-dev (>= 1.0),
+               libtracker-sparql-3.0-dev,
                libtotem-plparser-dev (>= 2.32),
                gobject-introspection (>= 0.6.3),
                libgirepository1.0-dev (>= 0.6.3),
